made favicon - made _redirects for netlify - changed tilelayer provider because idk how mapbox billing works

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
-    
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
+
     <title>Happy</title>
   </head>
   <body>
